--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,4 +4,4 @@ sonar.projectKey="elitedev1314520_GoogleMapsStreetView"
 # relative paths to source directories. More details and properties are described
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/ 
 sonar.sources=.
-sonar.branchName = 'master'
+# sonar.branch.name = 'master'
