--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,12 @@
-sonar.organization="elitedev1314520"
-sonar.projectKey="elitedev1314520_GoogleMapsStreetView"
+sonar.projectKey=elitedev1314520_GoogleMapsStreetView
+sonar.organization=elitedev1314520
 
-# relative paths to source directories. More details and properties are described
-# in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/ 
-sonar.sources=.
-sonar.branch.name = 'develop'
-sonar.branch.target = 'master'
+# This is the name and version displayed in the SonarCloud UI.
+#sonar.projectName=GoogleMapsStreetView
+#sonar.projectVersion=1.0
+
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+#sonar.sources=.
+
+# Encoding of the source code. Default is default system encoding
+#sonar.sourceEncoding=UTF-8
